* Increase use of boxing because JMH reveals that unnecessary boxing is optimized-away by the JIT. Unnecessary checks for null only cost a few nanoseconds. * Wrapped value in MaybeUndefined. * Added GenericType for casting to types with type parameters. * Refactored code to improve reuse \-> Binary size increased due to the use of lambdas, but code should be easier to maintain.
* Removed MutableStringMappers.toString(Object). Use StringMappers.toString(Object) instead.
* Moved classes from com.github.cowwoc.requirements.java.type to com.github.cowwoc.requirements.java.validator.
* StringMapper.apply(object) now takes a second parameter: StringMapper.apply(object, seen).
* Removed unused png files.

* Design discussion
  * Why separate primitive and boxes validators? For convenience, not as much for performance-reasons. JMH benchmarks on changeset eb7463f54c3b782dc53f2e459c5719cb4e3b7f2b reveal that
    * There is a 3% performance gain if we separate validators for boxed and primitive types. This includes arrays.
    * There is a 5% performance gain if we separate validator for long and int primitive types.
    * The only real downside of using boxed types everywhere is that `getValue()` returns a nullable type even if we know that the value will not be null.
    * Arrays of primitive types are different because Java does not box `int[]` as `Integer[]`.