@@ -4,6 +4,7 @@
  */
 package com.github.cowwoc.requirements.test.java;
 
+import com.github.cowwoc.requirements.java.Configuration;
 import com.github.cowwoc.requirements.java.ConfigurationUpdater;
 import com.github.cowwoc.requirements.java.internal.scope.ApplicationScope;
 import com.github.cowwoc.requirements.test.TestValidators;
@@ -13,12 +14,12 @@ import com.google.common.collect.Sets;
 import org.testng.annotations.Test;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 
+import static com.github.cowwoc.requirements.java.DefaultJavaValidators.requireThat;
 import static com.github.cowwoc.requirements.java.terminal.TerminalEncoding.NONE;
 
 public final class ConfigurationTest
@@ -35,18 +36,18 @@ public final class ConfigurationTest
 				actual.add(1);
 				actual.add(2);
 
-				Set<Integer> notEqual = Collections.emptySet();
+				Set<Integer> notEqual = Set.of();
 				try (ConfigurationUpdater configurationUpdater = validators.updateConfiguration())
 				{
-					configurationUpdater.stringMappers().put(LinkedHashSet.class, s ->
+					configurationUpdater.stringMappers().put(LinkedHashSet.class, (value, seen) ->
 					{
 						@SuppressWarnings("unchecked")
-						List<Integer> result = new ArrayList<>((LinkedHashSet<Integer>) s);
+						List<Integer> result = new ArrayList<>((LinkedHashSet<Integer>) value);
 						result.sort(Comparator.reverseOrder());
 						return result.toString();
 					});
 				}
-				validators.requireThat(actual, "Actual").isEqualTo(notEqual);
+				validators.requireThat(actual, "actual").isEqualTo(notEqual);
 			}
 			catch (IllegalArgumentException e)
 			{
@@ -66,6 +67,175 @@ public final class ConfigurationTest
 				configurationUpdater.exceptionTransformer(IllegalStateException::new);
 			}
 			validators.requireThat(false, "false").isEqualTo(true);
+		}
+	}
+
+	@Test(expectedExceptions = IllegalStateException.class)
+	public void fluentApi()
+	{
+		try (ApplicationScope scope = new TestApplicationScope(NONE))
+		{
+			TestValidators validators = new TestValidatorsImpl(scope).updateConfiguration(c ->
+				c.exceptionTransformer(IllegalStateException::new));
+			validators.requireThat(false, "false").isEqualTo(true);
+		}
+	}
+
+	/**
+	 * Ensure that modifying one instance of DefaultConfiguration does not modify the other.
+	 */
+	@Test
+	public void separateConfigurations()
+	{
+		try (ApplicationScope scope = new TestApplicationScope(NONE))
+		{
+			TestValidatorsImpl validators = new TestValidatorsImpl(scope);
+			try (ConfigurationUpdater configuration = validators.updateConfiguration())
+			{
+				configuration.allowDiff(true);
+			}
+			Configuration first = validators.configuration();
+			try (ConfigurationUpdater configuration = validators.updateConfiguration())
+			{
+				configuration.allowDiff(false);
+			}
+			Configuration second = validators.configuration();
+
+			validators.requireThat(first.allowDiff(), "first.config").
+				isNotEqualTo(second.allowDiff(), "second.config");
+		}
+	}
+
+	/**
+	 * Ensure that modifying the default configuration does not modify existing configuration instances.
+	 */
+	@Test
+	public void inheritDefaultConfiguration()
+	{
+		try (ApplicationScope scope = new TestApplicationScope(NONE))
+		{
+			TestValidatorsImpl validators = new TestValidatorsImpl(scope);
+			try (ConfigurationUpdater configuration = validators.updateConfiguration())
+			{
+				configuration.allowDiff(true);
+			}
+			Configuration first = validators.configuration();
+
+			try (ConfigurationUpdater configuration = validators.updateConfiguration())
+			{
+				configuration.allowDiff(false);
+			}
+			Configuration second = validators.configuration();
+
+			validators.requireThat(first.allowDiff(), "first.config").
+				isNotEqualTo(second.allowDiff(), "second.config");
+		}
+	}
+
+	@Test
+	public void factorySeparateContext()
+	{
+		try (ApplicationScope scope = new TestApplicationScope(NONE))
+		{
+			TestValidatorsImpl factory1 = new TestValidatorsImpl(scope);
+
+			TestValidators factory2 = factory1.copy();
+			factory2.withContext("factoryValue", "factoryName");
+
+			String message1 = factory1.checkIf("value", "name").
+				withContext("validatorValue", "validatorName").isNull().elseGetMessages().getFirst();
+			String message2 = factory2.checkIf("value", "name").
+				withContext("validatorValue", "validatorName").isNull().elseGetMessages().getFirst();
+
+			requireThat(message1, "message1").contains("validatorName: \"validatorValue\"").
+				doesNotContain("factoryName   : \"factoryValue\"");
+			requireThat(message2, "message2").contains("validatorName: \"validatorValue\"").
+				contains("factoryName  : \"factoryValue\"");
+		}
+	}
+
+	@Test
+	public void factoryInheritedContext()
+	{
+		try (ApplicationScope scope = new TestApplicationScope(NONE))
+		{
+			TestValidatorsImpl factory1 = new TestValidatorsImpl(scope);
+			factory1.withContext("factoryValue", "factoryName");
+
+			TestValidators factory2 = factory1.copy();
+			String message = factory2.checkIf("value", "name").
+				withContext("validatorValue", "validatorName").isNull().elseGetMessages().getFirst();
+
+			requireThat(message, "message2").contains("validatorName: \"validatorValue\"").
+				contains("factoryName  : \"factoryValue\"");
+		}
+	}
+
+	/**
+	 * Ensure that the validator context is separate from the factory context.
+	 */
+	@Test
+	public void validatorContextSeparateFromFactory()
+	{
+		try (ApplicationScope scope = new TestApplicationScope(NONE))
+		{
+			TestValidatorsImpl factory = new TestValidatorsImpl(scope);
+
+			String message = factory.checkIf("value", "name").
+				withContext("validatorValue", "validatorName").isNull().elseGetMessages().getFirst();
+
+			// Ensure that this does not affect pre-existing validators
+			factory.withContext("factoryValue", "factoryName");
+
+			requireThat(message, "message2").contains("validatorName: \"validatorValue\"").
+				doesNotContain("factoryName  : \"factoryValue\"");
+		}
+	}
+
+	/**
+	 * Ensure that a validator can override the context set by its factory.
+	 */
+	@Test
+	public void validatorOverridesFactoryContext()
+	{
+		try (ApplicationScope scope = new TestApplicationScope(NONE))
+		{
+			TestValidatorsImpl factory1 = new TestValidatorsImpl(scope);
+			factory1.withContext("factoryValue", "collision");
+
+			TestValidators factory2 = factory1.copy();
+			String message1 = factory1.checkIf("value", "name").
+				withContext("validatorValue", "collision").isNull().elseGetMessages().getFirst();
+			String message2 = factory2.checkIf("value", "name").
+				withContext("validatorValue", "collision").isNull().elseGetMessages().getFirst();
+
+			requireThat(message1, "message1").contains("collision: \"validatorValue\"").
+				doesNotContain("collision: \"factoryValue\"");
+			requireThat(message2, "message2").contains("collision: \"validatorValue\"").
+				doesNotContain("collision: \"factoryValue\"");
+		}
+	}
+
+	/**
+	 * Ensure that an exception can override the context set by the validator.
+	 */
+	@Test
+	public void exceptionOverridesValidatorContext()
+	{
+		try (ApplicationScope scope = new TestApplicationScope(NONE))
+		{
+			TestValidatorsImpl validators = new TestValidatorsImpl(scope);
+			validators.withContext("factoryValue", "missing");
+
+			Set<Integer> actual = Set.of(1, 2, 3);
+			Set<Integer> expected = Set.of(1, 2, 3, 4);
+
+			String message = validators.checkIf(actual, "actual").
+				withContext("validatorValue", "missing").containsAll(expected, "expected").
+				elseGetMessages().getFirst();
+			validators.requireThat(message, "message").contains("missing : [4]").
+				doesNotContain("missing: \"validatorValue\"").
+				doesNotContain("missing: \"factoryValue\"");
 		}
 	}
 }
