@@ -11,7 +11,6 @@ import com.github.cowwoc.requirements.test.scope.TestApplicationScope;
 import org.testng.annotations.Test;
 
 import java.util.AbstractMap.SimpleImmutableEntry;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -30,7 +29,7 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.emptyMap();
+			Map<String, String> actual = Map.of();
 			new TestValidatorsImpl(scope).requireThat(actual, null);
 		}
 	}
@@ -40,7 +39,7 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.emptyMap();
+			Map<String, String> actual = Map.of();
 			new TestValidatorsImpl(scope).requireThat(actual, "");
 		}
 	}
@@ -50,8 +49,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.emptyMap();
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEmpty();
+			Map<String, String> actual = Map.of();
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEmpty();
 		}
 	}
 
@@ -60,8 +59,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("key", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEmpty();
+			Map<String, String> actual = Map.of("key", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEmpty();
 		}
 	}
 
@@ -70,8 +69,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("key", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isNotEmpty();
+			Map<String, String> actual = Map.of("key", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isNotEmpty();
 		}
 	}
 
@@ -80,8 +79,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.emptyMap();
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isNotEmpty();
+			Map<String, String> actual = Map.of();
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isNotEmpty();
 		}
 	}
 
@@ -90,8 +89,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("key", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").keySet().contains("key");
+			Map<String, String> actual = Map.of("key", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").keySet().contains("key");
 		}
 	}
 
@@ -100,8 +99,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("notKey", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").keySet().contains("key");
+			Map<String, String> actual = Map.of("notKey", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").keySet().contains("key");
 		}
 	}
 
@@ -110,8 +109,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("key", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").keySet().
+			Map<String, String> actual = Map.of("key", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").keySet().
 				doesNotContain("notKey");
 		}
 	}
@@ -121,8 +120,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("notKey", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").keySet().
+			Map<String, String> actual = Map.of("notKey", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").keySet().
 				doesNotContain("notKey");
 		}
 	}
@@ -132,8 +131,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("key", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").values().contains("value");
+			Map<String, String> actual = Map.of("key", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").values().contains("value");
 		}
 	}
 
@@ -142,8 +141,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("key", "notValue");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").values().contains("value");
+			Map<String, String> actual = Map.of("key", "notValue");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").values().contains("value");
 		}
 	}
 
@@ -152,8 +151,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("key", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").values().
+			Map<String, String> actual = Map.of("key", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").values().
 				doesNotContain("notValue");
 		}
 	}
@@ -163,8 +162,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("key", "notValue");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").values().
+			Map<String, String> actual = Map.of("key", "notValue");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").values().
 				doesNotContain("notValue");
 		}
 	}
@@ -174,8 +173,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("key", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").entrySet().
+			Map<String, String> actual = Map.of("key", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").entrySet().
 				contains(new SimpleImmutableEntry<>("key", "value"));
 		}
 	}
@@ -185,8 +184,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("notKey", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").entrySet().
+			Map<String, String> actual = Map.of("notKey", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").entrySet().
 				contains(new SimpleImmutableEntry<>("key", "value"));
 		}
 	}
@@ -196,8 +195,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("key", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").entrySet().
+			Map<String, String> actual = Map.of("key", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").entrySet().
 				doesNotContain(new SimpleImmutableEntry<>("notKey", "value"));
 		}
 	}
@@ -207,8 +206,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("notKey", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").entrySet().
+			Map<String, String> actual = Map.of("notKey", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").entrySet().
 				doesNotContain(new SimpleImmutableEntry<>("notKey", "value"));
 		}
 	}
@@ -218,8 +217,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("key", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").size().isEqualTo(1);
+			Map<String, String> actual = Map.of("key", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").size().isEqualTo(1);
 		}
 	}
 
@@ -228,8 +227,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("notKey", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").size().isEqualTo(2);
+			Map<String, String> actual = Map.of("notKey", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").size().isEqualTo(2);
 		}
 	}
 
@@ -238,8 +237,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("key", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").size().isNotEqualTo(2);
+			Map<String, String> actual = Map.of("key", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").size().isNotEqualTo(2);
 		}
 	}
 
@@ -248,8 +247,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("notKey", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").size().isNotEqualTo(1);
+			Map<String, String> actual = Map.of("notKey", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").size().isNotEqualTo(1);
 		}
 	}
 
@@ -258,8 +257,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("key", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").
+			Map<String, String> actual = Map.of("key", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").
 				apply(v -> v.keySet().contains("key")).
 				apply(v -> v.values().contains("value"));
 		}
@@ -270,8 +269,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("key", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").
+			Map<String, String> actual = Map.of("key", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").
 				apply(v -> v.keySet().contains("notTheKey")).
 				apply(v -> v.values().contains("value"));
 		}
@@ -282,8 +281,8 @@ public final class MapTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			Map<String, String> actual = Collections.singletonMap("key", "value");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").
+			Map<String, String> actual = Map.of("key", "value");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").
 				apply(v -> v.keySet().contains("key")).
 				apply(v -> v.values().contains("notTheValue"));
 		}
@@ -295,8 +294,9 @@ public final class MapTest
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
 			Map<?, ?> actual = null;
-			List<String> expectedMessages = List.of("\"Actual\" may not be null", "Actual.keySet() must be equal to 5");
-			List<String> actualMessages = new TestValidatorsImpl(scope).checkIf(actual, "Actual").
+			List<String> expectedMessages = List.of("\"actual\" may not be null",
+				"actual.keySet() must be equal to 5");
+			List<String> actualMessages = new TestValidatorsImpl(scope).checkIf(actual, "actual").
 				keySet().isEqualTo(5).elseGetMessages();
 			new TestValidatorsImpl(scope).requireThat(actualMessages, "actualMessages").isEqualTo(expectedMessages);
 		}
@@ -308,9 +308,9 @@ public final class MapTest
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
 			Map<?, ?> actual = null;
-			List<String> expectedMessages = List.of("\"Actual\" may not be null",
-				"Actual.values() must be equal to 5");
-			List<String> actualMessages = new TestValidatorsImpl(scope).checkIf(actual, "Actual").
+			List<String> expectedMessages = List.of("\"actual\" may not be null",
+				"actual.values() must be equal to 5");
+			List<String> actualMessages = new TestValidatorsImpl(scope).checkIf(actual, "actual").
 				values().isEqualTo(5).elseGetMessages();
 			new TestValidatorsImpl(scope).requireThat(actualMessages, "actualMessages").isEqualTo(expectedMessages);
 		}
@@ -322,9 +322,9 @@ public final class MapTest
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
 			Map<?, ?> actual = null;
-			List<String> expectedMessages = List.of("\"Actual\" may not be null",
-				"Actual.entrySet() must be equal to 5");
-			List<String> actualMessages = new TestValidatorsImpl(scope).checkIf(actual, "Actual").
+			List<String> expectedMessages = List.of("\"actual\" may not be null",
+				"actual.entrySet() must be equal to 5");
+			List<String> actualMessages = new TestValidatorsImpl(scope).checkIf(actual, "actual").
 				entrySet().isEqualTo(5).elseGetMessages();
 			new TestValidatorsImpl(scope).requireThat(actualMessages, "actualMessages").isEqualTo(expectedMessages);
 		}
@@ -336,9 +336,10 @@ public final class MapTest
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
 			Map<?, ?> actual = null;
-			List<String> expectedMessages = List.of("\"Actual\" may not be null",
-				"\"Actual\" must be equal to 5");
-			List<String> actualMessages = new TestValidatorsImpl(scope).checkIf(actual, "Actual").
+			List<String> expectedMessages = List.of("\"actual\" may not be null",
+				"\"actual\" must be empty",
+				"\"actual\" must be equal to 5");
+			List<String> actualMessages = new TestValidatorsImpl(scope).checkIf(actual, "actual").
 				isEmpty().isEqualTo(5).elseGetMessages();
 			new TestValidatorsImpl(scope).requireThat(actualMessages, "actualMessages").isEqualTo(expectedMessages);
 		}
@@ -350,8 +351,10 @@ public final class MapTest
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
 			Map<?, ?> actual = null;
-			List<String> expectedMessages = List.of("\"Actual\" may not be null", "\"Actual\" must be equal to 5");
-			List<String> actualMessages = new TestValidatorsImpl(scope).checkIf(actual, "Actual").
+			List<String> expectedMessages = List.of("\"actual\" may not be null",
+				"\"actual\" may not be empty",
+				"\"actual\" must be equal to 5");
+			List<String> actualMessages = new TestValidatorsImpl(scope).checkIf(actual, "actual").
 				isNotEmpty().isEqualTo(5).elseGetMessages();
 			new TestValidatorsImpl(scope).requireThat(actualMessages, "actualMessages").isEqualTo(expectedMessages);
 		}
@@ -363,9 +366,10 @@ public final class MapTest
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
 			Map<?, ?> actual = null;
-			List<String> expectedMessages = List.of("\"Actual\" may not be null", "\"Actual\" must contain 5 entries");
-			List<String> actualMessages = new TestValidatorsImpl(scope).checkIf(actual, "Actual").
-				size().isEqualTo(5).elseGetMessages();
+			List<String> expectedMessages = List.of("\"actual\" may not be null",
+				"\"actual\" must contain 5 entries");
+			List<String> actualMessages = new TestValidatorsImpl(scope).checkIf(actual, "actual").size().
+				isEqualTo(5).elseGetMessages();
 			new TestValidatorsImpl(scope).requireThat(actualMessages, "actualMessages").
 				isEqualTo(expectedMessages);
 		}
@@ -390,7 +394,7 @@ public final class MapTest
 			for (Entry<Integer, Integer> entry : sorted.entrySet())
 				expected.add(entry.getKey().toString() + "=" + entry.getValue().toString());
 
-			validators.requireThat(output, "output").isEqualTo(expected.toString(), "Expected");
+			validators.requireThat(output, "output").isEqualTo(expected.toString(), "expected");
 		}
 	}
 
@@ -412,7 +416,7 @@ public final class MapTest
 			for (Entry<AtomicInteger, Integer> entry : input.entrySet())
 				expected.add(entry.getKey().toString() + "=" + entry.getValue().toString());
 
-			validators.requireThat(output, "output").isEqualTo(expected.toString(), "Expected");
+			validators.requireThat(output, "output").isEqualTo(expected.toString(), "expected");
 		}
 	}
 
@@ -435,7 +439,7 @@ public final class MapTest
 			for (Entry<Integer, Integer> entry : sorted.entrySet())
 				expected.add(entry.getKey().toString() + "=" + entry.getValue().toString());
 
-			validators.requireThat(output, "output").isEqualTo(expected.toString(), "Expected");
+			validators.requireThat(output, "output").isEqualTo(expected.toString(), "expected");
 		}
 	}
 }
