@@ -5,11 +5,12 @@
 package com.github.cowwoc.requirements.test.java.internal.diff;
 
 import com.github.cowwoc.requirements.java.ConfigurationUpdater;
-import com.github.cowwoc.requirements.java.internal.diff.TextOnly;
-import com.github.cowwoc.requirements.java.internal.diff.Writer16Colors;
-import com.github.cowwoc.requirements.java.internal.diff.Writer16MillionColors;
-import com.github.cowwoc.requirements.java.internal.diff.Writer256Colors;
-import com.github.cowwoc.requirements.java.internal.diff.Writer8Colors;
+import com.github.cowwoc.requirements.java.internal.message.ObjectMessages;
+import com.github.cowwoc.requirements.java.internal.message.diff.TextOnly;
+import com.github.cowwoc.requirements.java.internal.message.diff.Writer16Colors;
+import com.github.cowwoc.requirements.java.internal.message.diff.Writer16MillionColors;
+import com.github.cowwoc.requirements.java.internal.message.diff.Writer256Colors;
+import com.github.cowwoc.requirements.java.internal.message.diff.Writer8Colors;
 import com.github.cowwoc.requirements.java.internal.scope.ApplicationScope;
 import com.github.cowwoc.requirements.test.TestValidatorsImpl;
 import com.github.cowwoc.requirements.test.java.SameToStringAndHashCodeDifferentIdentity;
@@ -17,16 +18,14 @@ import com.github.cowwoc.requirements.test.java.SameToStringDifferentHashCode;
 import com.github.cowwoc.requirements.test.scope.TestApplicationScope;
 import org.testng.annotations.Test;
 
-import java.util.Collections;
 import java.util.List;
 
-import static com.github.cowwoc.requirements.java.internal.diff.DiffConstants.DIFF_DELETE;
-import static com.github.cowwoc.requirements.java.internal.diff.DiffConstants.DIFF_EQUAL;
-import static com.github.cowwoc.requirements.java.internal.diff.DiffConstants.DIFF_INSERT;
-import static com.github.cowwoc.requirements.java.internal.diff.DiffConstants.EOS_MARKER;
-import static com.github.cowwoc.requirements.java.internal.diff.DiffConstants.NEWLINE_MARKER;
-import static com.github.cowwoc.requirements.java.internal.diff.TextOnly.DIFF_PADDING;
-import static com.github.cowwoc.requirements.java.internal.util.Strings.TEXT_BLOCK_DELIMITER;
+import static com.github.cowwoc.requirements.java.internal.message.diff.DiffConstants.DIFF_DELETE;
+import static com.github.cowwoc.requirements.java.internal.message.diff.DiffConstants.DIFF_EQUAL;
+import static com.github.cowwoc.requirements.java.internal.message.diff.DiffConstants.DIFF_INSERT;
+import static com.github.cowwoc.requirements.java.internal.message.diff.DiffConstants.EOS_MARKER;
+import static com.github.cowwoc.requirements.java.internal.message.diff.DiffConstants.NEWLINE_MARKER;
+import static com.github.cowwoc.requirements.java.internal.message.diff.TextOnly.DIFF_PADDING;
 import static com.github.cowwoc.requirements.java.terminal.TerminalEncoding.NONE;
 import static com.github.cowwoc.requirements.java.terminal.TerminalEncoding.RGB_888_COLORS;
 import static com.github.cowwoc.requirements.java.terminal.TerminalEncoding.XTERM_16_COLORS;
@@ -47,20 +46,27 @@ public final class DiffTest
 			String actual = "int[6]";
 			String expected = "int[5]";
 
-			String expectedMessage = """
-				"Actual" must be equal to "int[5]".
-				Actual: "int[6]"\
-				""";
-			List<String> expectedMessages = Collections.singletonList(expectedMessage);
+			List<String> expectedMessages = List.of("""
+				"actual" must be equal to "int[5]".
+				actual: "int[6]"\
+				""");
 
 			TestValidatorsImpl validators = new TestValidatorsImpl(scope);
 			try (ConfigurationUpdater configurationUpdater = validators.updateConfiguration())
 			{
-				configurationUpdater.includeDiff(false);
+				configurationUpdater.allowDiff(false);
 			}
-			List<String> actualMessages = validators.checkIf(actual, "Actual").isEqualTo(expected).
+			List<String> actualMessages = validators.checkIf(actual, "actual").isEqualTo(expected).
 				elseGetMessages();
-			validators.requireThat(actualMessages, "actualMessages").isEqualTo(expectedMessages);
+			assert actualMessages.size() == expectedMessages.size() : "**************** actual.size:\n" +
+				actualMessages.size() + "\n**************** expected.size:\n" + expectedMessages.size();
+			for (int i = 0; i < actualMessages.size(); ++i)
+			{
+				String actualMessage = actualMessages.get(i);
+				String expectedMessage = expectedMessages.get(i);
+				assert (actualMessage.equals(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+					"\n**************** Expected:\n" + expectedMessage;
+			}
 		}
 	}
 
@@ -72,25 +78,39 @@ public final class DiffTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			String actual = "actual12345";
-			String expected = "expected12345";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			String actual = EXTEND_LENGTH("actual");
+			String expected = EXTEND_LENGTH("expected");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
 			String expectedMessage =
-				"Expected: " + DIFF_PADDING.repeat("\"actual12345\"".length()) + "\"expected12345\"" + EOS_MARKER +
-					"\n" +
-					"Diff    : " + DIFF_DELETE.repeat("\"actual12345\"".length()) +
-					DIFF_INSERT.repeat("\"expected12345\"".length()) +
+				"actual  : \"" + EXTEND_LENGTH("actual") + "\"" +
+					DIFF_PADDING.repeat(("\"" + EXTEND_LENGTH("expected") + "\"").length()) + EOS_MARKER + "\n" +
+					"diff    : " + DIFF_DELETE.repeat(("\"" + EXTEND_LENGTH("actual") + "\"").length()) +
+					DIFF_INSERT.repeat(("\"" + EXTEND_LENGTH("expected") + "\"").length()) +
 					DIFF_EQUAL.repeat(EOS_MARKER.length()) + "\n" +
-					"Actual  : \"actual12345\"" +
-					DIFF_PADDING.repeat("\"expected12345\"".length()) + EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+					"expected: " + DIFF_PADDING.repeat(("\"" + EXTEND_LENGTH("actual") + "\"").length()) + "\"" +
+					EXTEND_LENGTH("expected") + "\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
+	}
+
+	/**
+	 * Pads a string until it is long enough to trigger a diff.
+	 *
+	 * @param text the text to process
+	 * @return the updated text
+	 */
+	private String EXTEND_LENGTH(String text)
+	{
+		StringBuilder padded = new StringBuilder(text);
+		while (padded.length() < ObjectMessages.MINIMUM_LENGTH_FOR_DIFF)
+			padded.append(text);
+		return padded.toString();
 	}
 
 	/**
@@ -103,18 +123,18 @@ public final class DiffTest
 		{
 			String actual = "\"key\": \"value \"";
 			String expected = "\"key\": \"value\"";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
-			String expectedMessage = "Expected: \"\\\"key\\\": \\\"value \\\"\"" + EOS_MARKER + "\n" +
-				"Diff    : " + DIFF_EQUAL.repeat("\"\\\"key\\\": \\\"value".length()) + DIFF_DELETE +
+			String expectedMessage = "actual  : \"\\\"key\\\": \\\"value \\\"\"" + EOS_MARKER + "\n" +
+				"diff    : " + DIFF_EQUAL.repeat("\"\\\"key\\\": \\\"value".length()) + DIFF_DELETE +
 				DIFF_EQUAL.repeat(("\"\\\"").length() + EOS_MARKER.length()) + "\n" +
-				"Actual  : \"\\\"key\\\": \\\"value \\\"\"" + EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+				"expected: \"\\\"key\\\": \\\"value \\\"\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -126,31 +146,27 @@ public final class DiffTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			String actual = "\nactual";
-			String expected = "Expected";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			String actual = "\n" + EXTEND_LENGTH("actual");
+			String expected = EXTEND_LENGTH("expected");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
-			String expectedMessage =
-				"Expected  : " + DIFF_PADDING.repeat((TEXT_BLOCK_DELIMITER + NEWLINE_MARKER).length()) + "\n" +
-					"Diff      : " + DIFF_DELETE.repeat((TEXT_BLOCK_DELIMITER + NEWLINE_MARKER).length()) + "\n" +
-					"Actual@0  : " + TEXT_BLOCK_DELIMITER + NEWLINE_MARKER + "\n" +
-					"\n" +
-					"Expected  : " + DIFF_PADDING.repeat(NEWLINE_MARKER.length()) + "\n" +
-					"Diff      : " + DIFF_DELETE.repeat(NEWLINE_MARKER.length()) + "\n" +
-					"Actual@1  : " + NEWLINE_MARKER + "\n" +
-					"\n" +
-					"Expected@0: " + DIFF_PADDING.repeat(("Actual" + TEXT_BLOCK_DELIMITER).length()) + "\"Expected\"" +
-					EOS_MARKER + "\n" +
-					"Diff      : " + DIFF_DELETE.repeat(("Actual" + TEXT_BLOCK_DELIMITER).length()) +
-					DIFF_INSERT.repeat("\"expected\"".length()) + DIFF_EQUAL.repeat(EOS_MARKER.length()) + "\n" +
-					"Actual@2  : actual" + TEXT_BLOCK_DELIMITER + DIFF_PADDING.repeat("\"Expected\"".length()) +
-					EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+			String expectedMessage = "actual@0  : \"" + NEWLINE_MARKER + "\n" +
+				"diff      : " + DIFF_DELETE.repeat(("\"" + NEWLINE_MARKER).length()) + "\n" +
+				"expected  : " + DIFF_PADDING.repeat(("\"" + NEWLINE_MARKER).length()) + "\n" +
+				"\n" +
+				"actual@1  : " + EXTEND_LENGTH("actual") + "\"" +
+				DIFF_PADDING.repeat(("\"" + EXTEND_LENGTH("expected") + "\"").length()) + EOS_MARKER + "\n" +
+				"diff      : " + DIFF_DELETE.repeat((EXTEND_LENGTH("actual") + "\"").length()) +
+				DIFF_INSERT.repeat(("\"" + EXTEND_LENGTH("expected") + "\"").length()) +
+				DIFF_EQUAL.repeat(EOS_MARKER.length()) + "\n" +
+				"expected@0: " + DIFF_PADDING.repeat((EXTEND_LENGTH("actual") + "\"").length()) +
+				"\"" + EXTEND_LENGTH("expected") + "\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -162,31 +178,29 @@ public final class DiffTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			String actual = "actual\n";
-			String expected = "expected";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			String actual = EXTEND_LENGTH("actual") + "\n";
+			String expected = EXTEND_LENGTH("expected");
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
-			String expectedMessage =
-				"Expected  : " + DIFF_PADDING.repeat((TEXT_BLOCK_DELIMITER + NEWLINE_MARKER).length()) + "\n" +
-					"Diff      : " + DIFF_DELETE.repeat((TEXT_BLOCK_DELIMITER + NEWLINE_MARKER).length()) + "\n" +
-					"Actual@0  : " + TEXT_BLOCK_DELIMITER + NEWLINE_MARKER + "\n" +
-					"\n" +
-					"Expected  : " + DIFF_PADDING.repeat(("actual" + NEWLINE_MARKER).length()) + "\n" +
-					"Diff      : " + DIFF_DELETE.repeat(("actual" + NEWLINE_MARKER).length()) + "\n" +
-					"Actual@1  : actual" + NEWLINE_MARKER + "\n" +
-					"\n" +
-					"Expected@0: " + DIFF_PADDING.repeat((TEXT_BLOCK_DELIMITER).length()) + "\"expected\"" +
-					EOS_MARKER + "\n" +
-					"Diff      : " + DIFF_DELETE.repeat(TEXT_BLOCK_DELIMITER.length()) +
-					DIFF_INSERT.repeat("\"expected\"".length()) + DIFF_PADDING.repeat(EOS_MARKER.length()) + "\n" +
-					"Actual@2  : " + TEXT_BLOCK_DELIMITER + DIFF_PADDING.repeat(("\"expected\"").length()) +
-					EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+			String expectedMessage = "actual@0  : \"" + EXTEND_LENGTH("actual") + NEWLINE_MARKER + "\n" +
+				"diff      : " + DIFF_DELETE.repeat(("\"" + EXTEND_LENGTH("actual") + NEWLINE_MARKER).length()) +
+				"\n" +
+				"expected  : " + DIFF_PADDING.repeat(("\"" + EXTEND_LENGTH("actual") + NEWLINE_MARKER).length()) +
+				"\n" +
+				"\n" +
+				"actual@1  : \"" + DIFF_PADDING.repeat(("\"" + EXTEND_LENGTH("expected") + "\"").length()) +
+				EOS_MARKER + "\n" +
+				"diff      : " + DIFF_DELETE +
+				DIFF_INSERT.repeat(("\"" + EXTEND_LENGTH("expected") + "\"").length()) +
+				DIFF_PADDING.repeat(EOS_MARKER.length()) +
+				"\n" +
+				"expected@0: " + DIFF_PADDING + "\"" + EXTEND_LENGTH("expected") + "\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -198,34 +212,28 @@ public final class DiffTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			String actual = "\n\nvalue";
-			String expected = "value";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			String actual = EXTEND_LENGTH("prefix") + "\n\nvalue";
+			String expected = EXTEND_LENGTH("prefix") + "value";
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
 			String expectedMessage =
-				"Expected@0: " + "\"" + DIFF_PADDING.repeat(("\"\"" + NEWLINE_MARKER).length()) + "\n" +
-					"Diff      : " + DIFF_EQUAL.repeat("\"".length()) +
-					DIFF_DELETE.repeat(("\"\"" + NEWLINE_MARKER).length()) + "\n" +
-					"Actual@0  : " + TEXT_BLOCK_DELIMITER + NEWLINE_MARKER + "\n" +
+				"actual@0  : \"" + EXTEND_LENGTH("prefix") + NEWLINE_MARKER + "\n" +
+					"diff      : " + DIFF_EQUAL.repeat(("\"" + EXTEND_LENGTH("prefix")).length()) +
+					DIFF_DELETE.repeat(NEWLINE_MARKER.length()) + "\n" +
+					"expected@0: \"" + EXTEND_LENGTH("prefix") + DIFF_PADDING.repeat(NEWLINE_MARKER.length()) + "\n" +
 					"\n" +
-					"Expected  : " + DIFF_PADDING.repeat(NEWLINE_MARKER.length()) + "\n" +
-					"Diff      : " + DIFF_DELETE.repeat(NEWLINE_MARKER.length()) + "\n" +
-					"Actual@1  : " + NEWLINE_MARKER + "\n" +
+					"actual@1  : " + NEWLINE_MARKER + "\n" +
+					"diff      : " + DIFF_DELETE.repeat(NEWLINE_MARKER.length()) + "\n" +
+					"expected  : " + DIFF_PADDING.repeat(NEWLINE_MARKER.length()) + "\n" +
 					"\n" +
-					"Expected  : " + DIFF_PADDING.repeat(NEWLINE_MARKER.length()) + "\n" +
-					"Diff      : " + DIFF_DELETE.repeat(NEWLINE_MARKER.length()) + "\n" +
-					"Actual@2  : " + NEWLINE_MARKER + "\n" +
-					"\n" +
-					"Expected@0: value\"" + DIFF_PADDING.repeat("\"\"".length()) + EOS_MARKER + "\n" +
-					"Diff      : " + DIFF_EQUAL.repeat(("value\"").length()) + DIFF_DELETE.repeat("\"\"".length()) +
-					DIFF_EQUAL.repeat(EOS_MARKER.length()) + "\n" +
-					"Actual@3  : value" + TEXT_BLOCK_DELIMITER + EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+					"actual@2  : value\"" + EOS_MARKER + "\n" +
+					"expected@0: value\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -239,28 +247,28 @@ public final class DiffTest
 		{
 			String actual = "1\n2\n3\n4\n5";
 			String expected = "1\n2\n9\n4\n5";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
-			String expectedMessage = "Expected@0: " + TEXT_BLOCK_DELIMITER + NEWLINE_MARKER + "\n" +
-				"Actual@0  : " + TEXT_BLOCK_DELIMITER + NEWLINE_MARKER + "\n" +
+			String expectedMessage = "actual@0  : \"1" + NEWLINE_MARKER + "\n" +
+				"expected@0: \"1" + NEWLINE_MARKER + "\n" +
 				"\n" +
 				"[...]\n" +
 				"\n" +
-				"Expected@3: " + DIFF_PADDING + "9" + NEWLINE_MARKER + "\n" +
-				"Diff      : " + DIFF_DELETE + DIFF_INSERT +
+				"actual@2  : 3" + DIFF_PADDING + NEWLINE_MARKER + "\n" +
+				"diff      : " + DIFF_DELETE + DIFF_INSERT +
 				DIFF_EQUAL.repeat(NEWLINE_MARKER.length()) + "\n" +
-				"Actual@3  : 3" + DIFF_PADDING + NEWLINE_MARKER + "\n" +
+				"expected@2: " + DIFF_PADDING + "9" + NEWLINE_MARKER + "\n" +
 				"\n" +
 				"[...]\n" +
 				"\n" +
-				"Expected@5: 5" + TEXT_BLOCK_DELIMITER + EOS_MARKER + "\n" +
-				"Actual@5  : 5" + TEXT_BLOCK_DELIMITER + EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n\n**************** Actual:\n" + actualMessage;
+				"actual@4  : 5\"" + EOS_MARKER + "\n" +
+				"expected@4: 5\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -274,26 +282,26 @@ public final class DiffTest
 		{
 			String actual = "The dog is brown";
 			String expected = "The fox is down";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
 			String expectedMessage =
-				"Expected: \"The " + DIFF_PADDING.repeat("dog".length()) + "fox is " +
-					DIFF_PADDING.repeat("br".length()) + "down\"" + EOS_MARKER + "\n" +
-					"Diff    : " + DIFF_EQUAL.repeat("\"The ".length()) +
+				"actual  : \"The dog" +
+					DIFF_PADDING.repeat("fox".length()) + " is br" +
+					DIFF_PADDING.repeat("d".length()) + "own\"" +
+					EOS_MARKER + "\n" +
+					"diff    : " + DIFF_EQUAL.repeat("\"The ".length()) +
 					DIFF_DELETE.repeat("dog".length()) +
 					DIFF_INSERT.repeat("fox".length()) + DIFF_EQUAL.repeat(" is ".length()) +
 					DIFF_DELETE.repeat("br".length()) + DIFF_INSERT.repeat("d".length()) +
 					DIFF_EQUAL.repeat("own\"".length() + EOS_MARKER.length()) + "\n" +
-					"Actual  : \"The dog" +
-					DIFF_PADDING.repeat("fox".length()) + " is br" +
-					DIFF_PADDING.repeat("d".length()) + "own\"" +
-					EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+					"expected: \"The " + DIFF_PADDING.repeat("dog".length()) + "fox is " +
+					DIFF_PADDING.repeat("br".length()) + "down\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -304,18 +312,19 @@ public final class DiffTest
 		{
 			String actual = "you like me?";
 			String expected = "Don't you like me?";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
-			String expectedMessage = "Expected: \"Don't you like me?\"" + EOS_MARKER + "\n" +
-				"Diff    : " + DIFF_EQUAL.repeat("\"".length()) + DIFF_INSERT.repeat("Don't ".length()) +
-				DIFF_EQUAL.repeat("you like me?\"".length() + EOS_MARKER.length()) + "\n" +
-				"Actual  : \"" + DIFF_PADDING.repeat("Don't ".length()) + "you like me?\"" + EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+			String expectedMessage =
+				"actual  : \"" + DIFF_PADDING.repeat("Don't ".length()) + "you like me?\"" + EOS_MARKER + "\n" +
+					"diff    : " + DIFF_EQUAL.repeat("\"".length()) + DIFF_INSERT.repeat("Don't ".length()) +
+					DIFF_EQUAL.repeat("you like me?\"".length() + EOS_MARKER.length()) + "\n" +
+					"expected: \"Don't you like me?\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -326,18 +335,19 @@ public final class DiffTest
 		{
 			String actual = "I lice dogs";
 			String expected = "I like dogs";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
-			String expectedMessage = "Expected: \"I li" + DIFF_PADDING + "ke dogs\"" + EOS_MARKER + "\n" +
-				"Diff    : " + DIFF_EQUAL.repeat("\"I li".length()) + DIFF_DELETE + DIFF_INSERT +
-				DIFF_EQUAL.repeat("e dogs\"".length() + EOS_MARKER.length()) + "\n" +
-				"Actual  : \"I lic" + DIFF_PADDING + "e dogs\"" + EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+			String expectedMessage =
+				"actual  : \"I lic" + DIFF_PADDING + "e dogs\"" + EOS_MARKER + "\n" +
+					"diff    : " + DIFF_EQUAL.repeat("\"I li".length()) + DIFF_DELETE + DIFF_INSERT +
+					DIFF_EQUAL.repeat("e dogs\"".length() + EOS_MARKER.length()) + "\n" +
+					"expected: \"I li" + DIFF_PADDING + "ke dogs\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -348,19 +358,19 @@ public final class DiffTest
 		{
 			String actual = "I like dog";
 			String expected = "I like dogs";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
-			String expectedMessage = "Expected: \"I like dogs\"" + EOS_MARKER + "\n" +
-				"Diff    : " + DIFF_EQUAL.repeat("\"I like dog".length()) + DIFF_INSERT.repeat("s".length()) +
+			String expectedMessage = "actual  : \"I like dog" + DIFF_PADDING.repeat(" ".length()) +
+				"\"" + EOS_MARKER + "\n" +
+				"diff    : " + DIFF_EQUAL.repeat("\"I like dog".length()) + DIFF_INSERT.repeat("s".length()) +
 				DIFF_EQUAL.repeat(("\"" + EOS_MARKER).length()) + "\n" +
-				"Actual  : \"I like dog" + DIFF_PADDING.repeat(" ".length()) +
-				"\"" + EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+				"expected: \"I like dogs\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -371,23 +381,24 @@ public final class DiffTest
 		{
 			String actual = "I lices dogs";
 			String expected = "I like dogs";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
-			String expectedMessage = "Expected: \"I " + DIFF_PADDING.repeat("lices".length()) + "like dogs\"" +
-				EOS_MARKER + "\n" +
-				"Diff    : " + DIFF_EQUAL.repeat("\"I ".length()) +
-				DIFF_DELETE.repeat("lices".length()) +
-				DIFF_INSERT.repeat("like".length()) +
-				DIFF_EQUAL.repeat(" dogs\"".length() + EOS_MARKER.length()) +
-				"\n" +
-				"Actual  : \"I lices" + DIFF_PADDING.repeat("like".length()) + " dogs\"" +
-				EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+			String expectedMessage =
+				"actual  : \"I lices" + DIFF_PADDING.repeat("like".length()) + " dogs\"" +
+					EOS_MARKER + "\n" +
+					"diff    : " + DIFF_EQUAL.repeat("\"I ".length()) +
+					DIFF_DELETE.repeat("lices".length()) +
+					DIFF_INSERT.repeat("like".length()) +
+					DIFF_EQUAL.repeat(" dogs\"".length() + EOS_MARKER.length()) +
+					"\n" +
+					"expected: \"I " + DIFF_PADDING.repeat("lices".length()) + "like dogs\"" +
+					EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -401,24 +412,24 @@ public final class DiffTest
 		{
 			String actual = "2017-05-13T17:55:01-04:00[America/Montreal]";
 			String expected = "2017-05-13T17:56:03-04:00[America/Montreal]";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
 			String expectedMessage =
-				"Expected: \"2017-05-13T17:" + DIFF_PADDING.repeat("55".length()) +
-					"56:" + DIFF_PADDING.repeat("01".length()) + "03-04:00[America/Montreal]\"" + EOS_MARKER + "\n" +
-					"Diff    : " + DIFF_EQUAL.repeat("\"2017-05-13T17:".length()) +
+				"actual  : \"2017-05-13T17:55" + DIFF_PADDING.repeat("56".length()) +
+					":01" + DIFF_PADDING.repeat("03".length()) + "-04:00[America/Montreal]\"" +
+					EOS_MARKER + "\n" +
+					"diff    : " + DIFF_EQUAL.repeat("\"2017-05-13T17:".length()) +
 					DIFF_DELETE.repeat("55".length()) + DIFF_INSERT.repeat("56".length()) + DIFF_EQUAL +
 					DIFF_DELETE.repeat("01".length()) + DIFF_INSERT.repeat("03".length()) +
 					DIFF_EQUAL.repeat("-04:00[America/Montreal]\"".length() + EOS_MARKER.length()) + "\n" +
-					"Actual  : \"2017-05-13T17:55" + DIFF_PADDING.repeat("56".length()) +
-					":01" + DIFF_PADDING.repeat("03".length()) + "-04:00[America/Montreal]\"" +
-					EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+					"expected: \"2017-05-13T17:" + DIFF_PADDING.repeat("55".length()) +
+					"56:" + DIFF_PADDING.repeat("01".length()) + "03-04:00[America/Montreal]\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -432,7 +443,7 @@ public final class DiffTest
 		SameToStringDifferentHashCode expected = new SameToStringDifferentHashCode();
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").
 				isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
@@ -441,13 +452,13 @@ public final class DiffTest
 			String actualMessage = e.getMessage();
 			assert (actualMessage.contains(actual.toString())) :
 				"Was expecting output to contain actual value, but did not.\n" +
-					" Actual:\n" + actualMessage;
-			assert (actualMessage.contains("Actual.hashCode")) :
-				"Was expecting output to contain Actual.hashCode, but did not.\n" +
-					" Actual:\n" + actualMessage;
-			assert (actualMessage.contains("Expected.hashCode")) :
-				"Was expecting output to contain Expected.hashCode, but did not.\n" +
-					" Actual:\n" + actualMessage;
+					"actual:\n" + actualMessage;
+			assert (actualMessage.contains("actual.hashCode")) :
+				"Was expecting output to contain actual.hashCode, but did not.\n" +
+					"actual:\n" + actualMessage;
+			assert (actualMessage.contains("expected.hashCode")) :
+				"Was expecting output to contain expected.hashCode, but did not.\n" +
+					"actual:\n" + actualMessage;
 		}
 	}
 
@@ -462,7 +473,7 @@ public final class DiffTest
 		SameToStringAndHashCodeDifferentIdentity expected = new SameToStringAndHashCodeDifferentIdentity();
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").
 				isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
@@ -471,13 +482,13 @@ public final class DiffTest
 			String actualMessage = e.getMessage();
 			assert (actualMessage.contains(actual.toString())) :
 				"Was expecting output to contain actual value, but did not.\n" +
-					" Actual:\n" + actualMessage;
-			assert (actualMessage.contains("Actual.identityHashCode")) :
-				"Was expecting output to contain Actual.identityHashCode, but did not.\n" +
-					" Actual:\n" + actualMessage;
-			assert (actualMessage.contains("Expected.identityHashCode")) :
-				"Was expecting output to contain Expected.identityHashCode, but did not.\n" +
-					" Actual:\n" + actualMessage;
+					"actual:\n" + actualMessage;
+			assert (actualMessage.contains("actual.identityHashCode")) :
+				"Was expecting output to contain actual.identityHashCode, but did not.\n" +
+					"actual:\n" + actualMessage;
+			assert (actualMessage.contains("expected.identityHashCode")) :
+				"Was expecting output to contain expected.identityHashCode, but did not.\n" +
+					"actual:\n" + actualMessage;
 		}
 	}
 
@@ -494,34 +505,33 @@ public final class DiffTest
 			""";
 		String expected = """
 			one
-			  \s
+			\s\s\s
 			three
 			""";
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
-			String expectedMessage = "\"Actual\" had an unexpected value.\n" +
+			String expectedMessage = "\"actual\" had an unexpected value.\n" +
 				"\n" +
-				"Expected@0: " + TEXT_BLOCK_DELIMITER + NEWLINE_MARKER + "\n" +
-				"Actual@0  : " + TEXT_BLOCK_DELIMITER + NEWLINE_MARKER + "\n" +
+				"actual@0  : \"one" + NEWLINE_MARKER + "\n" +
+				"expected@0: \"one" + NEWLINE_MARKER + "\n" +
+				"\n" +
+				"actual@1  : " + DIFF_PADDING.repeat("   ".length()) + NEWLINE_MARKER + "\n" +
+				"diff      : " + DIFF_INSERT.repeat("   ".length()) + DIFF_PADDING.repeat(NEWLINE_MARKER.length()) +
+				"\n" +
+				"expected@1: " + DIFF_PADDING.repeat("   ".length()) + NEWLINE_MARKER + "\n" +
 				"\n" +
 				"[...]\n" +
 				"\n" +
-				"Expected@2: " + DIFF_PADDING.repeat(3) + NEWLINE_MARKER + "\n" +
-				"Diff      : " + DIFF_INSERT.repeat(3) + DIFF_PADDING.repeat(NEWLINE_MARKER.length()) + "\n" +
-				"Actual@2  : " + DIFF_PADDING.repeat(3) + NEWLINE_MARKER + "\n" +
-				"\n" +
-				"[...]\n" +
-				"\n" +
-				"Expected@4: " + TEXT_BLOCK_DELIMITER + EOS_MARKER + "\n" +
-				"Actual@4  : " + TEXT_BLOCK_DELIMITER + EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+				"actual@3  : \"" + EOS_MARKER + "\n" +
+				"expected@3: \"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -532,28 +542,28 @@ public final class DiffTest
 		{
 			List<Integer> actual = List.of(1, 2, 3, 4, 5);
 			List<Integer> expected = List.of(1, 2, 9, 4, 5);
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
-			String expectedMessage = "Expected[0]: 1" + EOS_MARKER + "\n" +
-				"Actual[0]  : 1" + EOS_MARKER + "\n" +
+			String expectedMessage = "actual[0]  : 1" + EOS_MARKER + "\n" +
+				"expected[0]: 1" + EOS_MARKER + "\n" +
 				"\n" +
 				"[...]\n" +
 				"\n" +
-				"Expected[2]: " + DIFF_PADDING + "9" + EOS_MARKER + "\n" +
-				"Diff       : " + DIFF_DELETE + DIFF_INSERT +
+				"actual[2]  : 3" + DIFF_PADDING.repeat(1) + EOS_MARKER + "\n" +
+				"diff       : " + DIFF_DELETE + DIFF_INSERT +
 				DIFF_EQUAL.repeat(NEWLINE_MARKER.length()) + "\n" +
-				"Actual[2]  : 3" + DIFF_PADDING.repeat(1) + EOS_MARKER + "\n" +
+				"expected[2]: " + DIFF_PADDING + "9" + EOS_MARKER + "\n" +
 				"\n" +
 				"[...]\n" +
 				"\n" +
-				"Expected[4]: 5" + EOS_MARKER + "\n" +
-				"Actual[4]  : 5" + EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n\n**************** Actual:\n" + actualMessage;
+				"actual[4]  : 5" + EOS_MARKER + "\n" +
+				"expected[4]: 5" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -564,36 +574,33 @@ public final class DiffTest
 		{
 			List<String> actual = List.of("1", "foo\nbar", "3");
 			List<String> expected = List.of("1", "bar\nfoo", "3");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
-			String expectedMessage = "Expected[0]  : \"1\"" + EOS_MARKER + "\n" +
-				"Actual[0]    : \"1\"" + EOS_MARKER + "\n" +
+			String expectedMessage = "actual[0]    : \"1\"" + EOS_MARKER + "\n" +
+				"expected[0]  : \"1\"" + EOS_MARKER + "\n" +
 				"\n" +
-				"Expected[1]@0: " + TEXT_BLOCK_DELIMITER + NEWLINE_MARKER + "\n" +
-				"Actual[1]@0  : " + TEXT_BLOCK_DELIMITER + NEWLINE_MARKER + "\n" +
+				"actual[1]@0  : \"foo" + NEWLINE_MARKER + "\n" +
+				"diff         : " + DIFF_EQUAL + DIFF_DELETE.repeat(("foo" + NEWLINE_MARKER).length()) + "\n" +
+				"expected[1]@0: \"" + DIFF_PADDING.repeat(("foo" + NEWLINE_MARKER).length()) + "\n" +
 				"\n" +
-				"Expected[1]  : " + DIFF_PADDING.repeat(("foo" + NEWLINE_MARKER).length()) + "\n" +
-				"Diff         : " + DIFF_DELETE.repeat(("foo" + NEWLINE_MARKER).length()) + "\n" +
-				"Actual[1]@1  : foo" + NEWLINE_MARKER + "\n" +
+				"actual[1]@1  : bar" + DIFF_PADDING.repeat(NEWLINE_MARKER.length()) + "\n" +
+				"diff         : " + DIFF_EQUAL.repeat("bar".length()) + DIFF_INSERT.repeat(NEWLINE_MARKER.length()) +
 				"\n" +
-				"Expected[1]@1: bar" + NEWLINE_MARKER + "\n" +
-				"Diff         : " + DIFF_EQUAL.repeat("bar".length()) + DIFF_INSERT.repeat(NEWLINE_MARKER.length()) +
+				"expected[1]@0: bar" + NEWLINE_MARKER + "\n" +
 				"\n" +
-				"Actual[1]@2  : bar" + DIFF_PADDING.repeat(NEWLINE_MARKER.length()) + "\n" +
+				"actual[1]@1  : " + DIFF_PADDING.repeat("foo".length()) + "\"" + EOS_MARKER + "\n" +
+				"diff         : " + DIFF_INSERT.repeat("foo".length()) +
+				DIFF_EQUAL.repeat(("\"" + EOS_MARKER).length()) + "\n" +
+				"expected[1]@1: foo\"" + EOS_MARKER + "\n" +
 				"\n" +
-				"Expected[1]@2: foo" + TEXT_BLOCK_DELIMITER + EOS_MARKER + "\n" +
-				"Diff         : " + DIFF_INSERT.repeat("foo".length()) +
-				DIFF_EQUAL.repeat((TEXT_BLOCK_DELIMITER + EOS_MARKER).length()) + "\n" +
-				"Actual[1]@2  : " + DIFF_PADDING.repeat("foo".length()) + TEXT_BLOCK_DELIMITER + EOS_MARKER + "\n" +
-				"\n" +
-				"Expected[2]  : \"3\"" + EOS_MARKER + "\n" +
-				"Actual[2]    : \"3\"" + EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n\n**************** Actual:\n" + actualMessage;
+				"actual[2]    : \"3\"" + EOS_MARKER + "\n" +
+				"expected[2]  : \"3\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -606,37 +613,37 @@ public final class DiffTest
 			List<String> actual = List.of("1", "2, 3, 4", "5");
 			// 5 elements
 			List<String> expected = List.of("1", "2", "3", "4", "5");
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
 			String expectedMessage =
-				"Expected[0]: \"1\"" + EOS_MARKER + "\n" +
-					"Actual[0]  : \"1\"" + EOS_MARKER + "\n" +
+				"actual[0]  : \"1\"" + EOS_MARKER + "\n" +
+					"expected[0]: \"1\"" + EOS_MARKER + "\n" +
 					"\n" +
-					"Expected[1]: \"2" + DIFF_PADDING.repeat(", 3, 4".length()) + "\"" + EOS_MARKER + "\n" +
-					"Diff       : " + DIFF_EQUAL.repeat("\"2".length()) + DIFF_DELETE.repeat(", 3, 4".length()) +
+					"actual[1]  : \"2, 3, 4\"" + EOS_MARKER + "\n" +
+					"diff       : " + DIFF_EQUAL.repeat("\"2".length()) + DIFF_DELETE.repeat(", 3, 4".length()) +
 					DIFF_EQUAL.repeat(("\"" + EOS_MARKER).length()) + "\n" +
-					"Actual[1]  : \"2, 3, 4\"" + EOS_MARKER + "\n" +
+					"expected[1]: \"2" + DIFF_PADDING.repeat(", 3, 4".length()) + "\"" + EOS_MARKER + "\n" +
 					"\n" +
-					"Expected[2]: " + DIFF_PADDING.repeat("\"5\"".length()) + "\"3\"" + EOS_MARKER + "\n" +
-					"Diff       : " + DIFF_DELETE.repeat("\"5\"".length()) + DIFF_INSERT.repeat("\"3\"".length()) +
+					"actual[2]  : \"5\"" + DIFF_PADDING.repeat("\"3\"".length()) + EOS_MARKER + "\n" +
+					"diff       : " + DIFF_DELETE.repeat("\"5\"".length()) + DIFF_INSERT.repeat("\"3\"".length()) +
 					DIFF_EQUAL.repeat(EOS_MARKER.length()) + "\n" +
-					"Actual[2]  : \"5\"" + DIFF_PADDING.repeat("\"3\"".length()) + EOS_MARKER + "\n" +
+					"expected[2]: " + DIFF_PADDING.repeat("\"5\"".length()) + "\"3\"" + EOS_MARKER + "\n" +
 					"\n" +
-					"Expected[3]: \"4\"" + EOS_MARKER + "\n" +
-					"Diff       : " + DIFF_INSERT.repeat("\"4\"".length()) + DIFF_EQUAL.repeat(EOS_MARKER.length()) +
+					"actual     : " + DIFF_PADDING.repeat("\"4\"".length()) + EOS_MARKER + "\n" +
+					"diff       : " + DIFF_INSERT.repeat("\"4\"".length()) + DIFF_EQUAL.repeat(EOS_MARKER.length()) +
 					"\n" +
-					"Actual     : " + DIFF_PADDING.repeat("\"4\"".length()) + EOS_MARKER + "\n" +
+					"expected[3]: \"4\"" + EOS_MARKER + "\n" +
 					"\n" +
-					"Expected[4]: \"5\"" + EOS_MARKER + "\n" +
-					"Diff       : " + DIFF_INSERT.repeat("\"5\"".length()) + DIFF_EQUAL.repeat(EOS_MARKER.length()) +
+					"actual     : " + DIFF_PADDING.repeat("\"5\"".length()) + EOS_MARKER + "\n" +
+					"diff       : " + DIFF_INSERT.repeat("\"5\"".length()) + DIFF_EQUAL.repeat(EOS_MARKER.length()) +
 					"\n" +
-					"Actual     : " + DIFF_PADDING.repeat("\"5\"".length()) + EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n\n**************** Actual:\n" + actualMessage;
+					"expected[4]: \"5\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -650,7 +657,7 @@ public final class DiffTest
 		{
 			String actual = "int[1234567890]";
 			String expected = "int[1234 67890]";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
@@ -658,12 +665,12 @@ public final class DiffTest
 			TextOnly scheme = new TextOnly();
 			String actualMessage = e.getMessage();
 			String expectedMessage =
-				"Expected: \"int[1234" + scheme.getPaddingMarker().repeat(2) + "67890]\"" + EOS_MARKER + "\n" +
-					"Diff    : " + DIFF_EQUAL.repeat("\"int[1234".length()) + DIFF_DELETE + DIFF_INSERT +
+				"actual  : \"int[12345" + scheme.getPaddingMarker() + "67890]\"" + EOS_MARKER + "\n" +
+					"diff    : " + DIFF_EQUAL.repeat("\"int[1234".length()) + DIFF_DELETE + DIFF_INSERT +
 					DIFF_EQUAL.repeat("67890]\"".length() + EOS_MARKER.length()) + "\n" +
-					"Actual  : \"int[12345" + scheme.getPaddingMarker() + "67890]\"" + EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+					"expected: \"int[1234" + scheme.getPaddingMarker().repeat(2) + "67890]\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -678,24 +685,25 @@ public final class DiffTest
 		{
 			String actual = "different-same-different";
 			String expected = "maybe-same-maybe";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
-			String expectedMessage = "Expected: " + DIFF_PADDING.repeat("\"different".length()) + "\"maybe-same-" +
-				DIFF_PADDING.repeat("different\"".length()) + "maybe\"" + EOS_MARKER + "\n" +
-				"Diff    : " + DIFF_DELETE.repeat("\"different".length()) +
-				DIFF_INSERT.repeat("\"maybe".length()) +
-				DIFF_EQUAL.repeat("-same-".length()) +
-				DIFF_DELETE.repeat("different\"".length()) +
-				DIFF_INSERT.repeat("maybe\"".length()) +
-				DIFF_EQUAL.repeat(NEWLINE_MARKER.length()) + "\n" +
-				"Actual  : \"different" + DIFF_PADDING.repeat("\"maybe".length()) +
-				"-same-different\"" + DIFF_PADDING.repeat("maybe\"".length()) + EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+			String expectedMessage =
+				"actual  : \"different" + DIFF_PADDING.repeat("\"maybe".length()) +
+					"-same-different\"" + DIFF_PADDING.repeat("maybe\"".length()) + EOS_MARKER + "\n" +
+					"diff    : " + DIFF_DELETE.repeat("\"different".length()) +
+					DIFF_INSERT.repeat("\"maybe".length()) +
+					DIFF_EQUAL.repeat("-same-".length()) +
+					DIFF_DELETE.repeat("different\"".length()) +
+					DIFF_INSERT.repeat("maybe\"".length()) +
+					DIFF_EQUAL.repeat(NEWLINE_MARKER.length()) + "\n" +
+					"expected: " + DIFF_PADDING.repeat("\"different".length()) + "\"maybe-same-" +
+					DIFF_PADDING.repeat("different\"".length()) + "maybe\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -705,20 +713,20 @@ public final class DiffTest
 	 * INSERT updates the diff of the wrong line number. We end up with:
 	 *
 	 * <pre><code>
-	 * Actual@1  : same\n
-	 * Diff      : ------
-	 * Expected  :
+	 * actual@1  : same\n
+	 * diff      : ------
+	 * expected  :
 	 *
-	 * Actual@2  : actual
-	 * Diff      : ------++++++
-	 * Expected@1:       same\n
+	 * actual@2  : actual
+	 * diff      : ------++++++
+	 * expected@1:       same\n
 	 * </code></pre>
 	 * <p>
 	 * instead of:
 	 *
 	 * <pre><code>
 	 * Actual    : same\n
-	 * Expected  : same\n
+	 * expected  : same\n
 	 * </code></pre>
 	 */
 	@Test
@@ -728,35 +736,31 @@ public final class DiffTest
 		{
 			String actual = "actual\nsame\nactual actual";
 			String expected = "expected\nsame\nexpected expected";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
 			String expectedMessage =
-				"Expected@0: " + TEXT_BLOCK_DELIMITER + NEWLINE_MARKER + "\n" +
-					"Actual@0  : " + TEXT_BLOCK_DELIMITER + NEWLINE_MARKER + "\n" +
-					"\n" +
-					"Expected@1: " + DIFF_PADDING.repeat("actual".length()) + "expected" + NEWLINE_MARKER + "\n" +
-					"Diff      : " + DIFF_DELETE.repeat("actual".length()) +
-					DIFF_INSERT.repeat("expected".length()) + DIFF_EQUAL.repeat(NEWLINE_MARKER.length()) + "\n" +
-					"Actual@1  : actual" + DIFF_PADDING.repeat("expected".length()) + NEWLINE_MARKER + "\n" +
+				"actual@0  : \"actual" + DIFF_PADDING.repeat("\"expected".length()) + NEWLINE_MARKER + "\n" +
+					"diff      : " + DIFF_DELETE.repeat("\"actual".length()) +
+					DIFF_INSERT.repeat("\"expected".length()) + DIFF_EQUAL.repeat(NEWLINE_MARKER.length()) + "\n" +
+					"expected@0: " + DIFF_PADDING.repeat("\"actual".length()) + "\"expected" + NEWLINE_MARKER + "\n" +
 					"\n" +
 					"[...]\n" +
 					"\n" +
-					"Expected@3: " + DIFF_PADDING.repeat("actual".length()) + "expected" + DIFF_PADDING +
-					DIFF_PADDING.repeat(("actual" + TEXT_BLOCK_DELIMITER).length()) + "expected" +
-					TEXT_BLOCK_DELIMITER + EOS_MARKER + "\n" +
-					"Diff      : " + DIFF_DELETE.repeat("actual".length()) + DIFF_INSERT.repeat("expected".length()) +
-					DIFF_EQUAL + DIFF_DELETE.repeat(("actual" + TEXT_BLOCK_DELIMITER).length()) +
-					DIFF_INSERT.repeat(("expected" + TEXT_BLOCK_DELIMITER).length()) +
+					"actual@2  : actual" + DIFF_PADDING.repeat("expected".length()) + DIFF_EQUAL + "actual\"" +
+					DIFF_PADDING.repeat(("expected\"").length()) +
+					EOS_MARKER + "\n" +
+					"diff      : " + DIFF_DELETE.repeat("actual".length()) + DIFF_INSERT.repeat("expected".length()) +
+					DIFF_EQUAL + DIFF_DELETE.repeat(("actual\"").length()) +
+					DIFF_INSERT.repeat("expected\"".length()) +
 					DIFF_EQUAL.repeat(NEWLINE_MARKER.length()) + "\n" +
-					"Actual@3  : actual" + DIFF_PADDING.repeat("expected".length()) + DIFF_EQUAL + "actual" +
-					TEXT_BLOCK_DELIMITER + DIFF_PADDING.repeat(("expected" + TEXT_BLOCK_DELIMITER).length()) +
-					EOS_MARKER;
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+					"expected@2: " + DIFF_PADDING.repeat("actual".length()) + "expected" + DIFF_PADDING +
+					DIFF_PADDING.repeat(("actual\"").length()) + "expected\"" + EOS_MARKER;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -770,27 +774,27 @@ public final class DiffTest
 		{
 			String actual = "int[1234567890]";
 			String expected = "int[1234 67890]";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			Writer16Colors scheme = new Writer16Colors();
 			String actualMessage = e.getMessage();
-			String expectedMessage = "Expected: " + scheme.decorateEqualText("\"int[1234") +
+			String expectedMessage = "actual  : " + scheme.decorateEqualText("\"int[1234") +
+				scheme.decorateDeletedText("5") + scheme.decoratePadding(scheme.getPaddingMarker()) +
+				scheme.decorateEqualText("67890]\"") + EOS_MARKER + scheme.stopDecoration() + "\n" +
+				"expected: " + scheme.decorateEqualText("\"int[1234") +
 				scheme.decoratePadding(scheme.getPaddingMarker()) +
 				scheme.decorateInsertedText(" ") + scheme.decorateEqualText("67890]\"") + EOS_MARKER +
-				scheme.stopDecoration() + "\n" +
-				"Actual  : " + scheme.decorateEqualText("\"int[1234") +
-				scheme.decorateDeletedText("5") + scheme.decoratePadding(scheme.getPaddingMarker()) +
-				scheme.decorateEqualText("67890]\"") + EOS_MARKER + scheme.stopDecoration();
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+				scheme.stopDecoration();
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
 	/**
-	 * Ensure that XTERM_16_COLORS diffs generate the expected value.
+	 * Ensure that XTERM_8_COLORS diffs generate the expected value.
 	 */
 	@Test
 	public void diffArraySize_8Colors()
@@ -799,21 +803,21 @@ public final class DiffTest
 		{
 			String actual = "int[1234567890]";
 			String expected = "int[1234 67890]";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			Writer8Colors scheme = new Writer8Colors();
 			String actualMessage = e.getMessage();
-			String expectedMessage = "Expected: " + scheme.decorateEqualText("\"int[1234") +
-				scheme.decoratePadding(scheme.getPaddingMarker()) + scheme.decorateInsertedText(" ") +
-				scheme.decorateEqualText("67890]\"") + EOS_MARKER + scheme.stopDecoration() + "\n" +
-				"Actual  : " + scheme.decorateEqualText("\"int[1234") +
+			String expectedMessage = "actual  : " + scheme.decorateEqualText("\"int[1234") +
 				scheme.decorateDeletedText("5") + scheme.decoratePadding(scheme.getPaddingMarker()) +
+				scheme.decorateEqualText("67890]\"") + EOS_MARKER + scheme.stopDecoration() + "\n" +
+				"expected: " + scheme.decorateEqualText("\"int[1234") +
+				scheme.decoratePadding(scheme.getPaddingMarker()) + scheme.decorateInsertedText(" ") +
 				scheme.decorateEqualText("67890]\"") + EOS_MARKER + scheme.stopDecoration();
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -827,21 +831,21 @@ public final class DiffTest
 		{
 			String actual = "int[1234567890]";
 			String expected = "int[1234 67890]";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			Writer256Colors scheme = new Writer256Colors();
 			String actualMessage = e.getMessage();
-			String expectedMessage = "Expected: " + scheme.decorateEqualText("\"int[1234") +
-				scheme.decoratePadding(scheme.getPaddingMarker()) + scheme.decorateInsertedText(" ") +
-				scheme.decorateEqualText("67890]\"") + EOS_MARKER + scheme.stopDecoration() + "\n" +
-				"Actual  : " + scheme.decorateEqualText("\"int[1234") +
+			String expectedMessage = "actual  : " + scheme.decorateEqualText("\"int[1234") +
 				scheme.decorateDeletedText("5") + scheme.decoratePadding(scheme.getPaddingMarker()) +
+				scheme.decorateEqualText("67890]\"") + EOS_MARKER + scheme.stopDecoration() + "\n" +
+				"expected: " + scheme.decorateEqualText("\"int[1234") +
+				scheme.decoratePadding(scheme.getPaddingMarker()) + scheme.decorateInsertedText(" ") +
 				scheme.decorateEqualText("67890]\"") + EOS_MARKER + scheme.stopDecoration();
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -855,22 +859,22 @@ public final class DiffTest
 		{
 			String actual = "int[1234567890]";
 			String expected = "int[1234 67890]";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			Writer16MillionColors scheme = new Writer16MillionColors();
 			String actualMessage = e.getMessage();
-			String expectedMessage = "Expected: " + scheme.decorateEqualText("\"int[1234") +
+			String expectedMessage = "actual  : " + scheme.decorateEqualText("\"int[1234") +
+				scheme.decorateDeletedText("5") + scheme.decoratePadding(scheme.getPaddingMarker()) +
+				scheme.decorateEqualText("67890]\"") + EOS_MARKER + scheme.stopDecoration() + "\n" +
+				"expected: " + scheme.decorateEqualText("\"int[1234") +
 				scheme.decoratePadding(scheme.getPaddingMarker()) +
 				scheme.decorateInsertedText(" ") + scheme.decorateEqualText("67890]\"") + EOS_MARKER +
-				scheme.stopDecoration() + "\n" +
-				"Actual  : " + scheme.decorateEqualText("\"int[1234") +
-				scheme.decorateDeletedText("5") + scheme.decoratePadding(scheme.getPaddingMarker()) +
-				scheme.decorateEqualText("67890]\"") + EOS_MARKER + scheme.stopDecoration();
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+				scheme.stopDecoration();
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -882,33 +886,26 @@ public final class DiffTest
 	{
 		try (ApplicationScope scope = new TestApplicationScope(XTERM_16_COLORS))
 		{
-			String actual = "foo\nbar";
-			String expected = "bar";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").isEqualTo(expected);
+			String actual = EXTEND_LENGTH("prefix") + "foo\nbar";
+			String expected = EXTEND_LENGTH("prefix") + "bar";
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").isEqualTo(expected);
 			fail("Expected method to throw exception");
 		}
 		catch (IllegalArgumentException e)
 		{
 			Writer16Colors scheme = new Writer16Colors();
 			String actualMessage = e.getMessage();
-			String expectedMessage = "Expected@0: " + scheme.decorateEqualText("\"") +
-				scheme.decoratePadding(scheme.getPaddingMarker().repeat(("\"\"" + NEWLINE_MARKER).length())) +
-				scheme.stopDecoration() + "\n" +
-				"Actual@0  : " + scheme.decorateEqualText("\"") +
-				scheme.decorateDeletedText("\"\"" + NEWLINE_MARKER) + scheme.stopDecoration() + "\n" +
+			String expectedMessage = "actual@0  : " + scheme.decorateEqualText("\"" + EXTEND_LENGTH("prefix")) +
+				scheme.decorateDeletedText("foo" + NEWLINE_MARKER) + scheme.stopDecoration() + "\n" +
+				"expected@0: " + scheme.decorateEqualText("\"" + EXTEND_LENGTH("prefix")) +
+				scheme.decoratePadding(scheme.getPaddingMarker().repeat(("foo" + NEWLINE_MARKER).length())) +
+				scheme.stopDecoration() +
 				"\n" +
-				"Expected  : " + scheme.decoratePadding(
-				scheme.getPaddingMarker().repeat(("foo" + NEWLINE_MARKER).length())) + scheme.stopDecoration() +
 				"\n" +
-				"Actual@1  : " + scheme.decorateDeletedText("foo" + NEWLINE_MARKER) + scheme.stopDecoration() + "\n" +
-				"\n" +
-				"Expected@0: " + scheme.decorateEqualText("bar\"") + scheme.decoratePadding(
-				scheme.getPaddingMarker().repeat("\"\"".length())) + scheme.decorateEqualText(EOS_MARKER) +
-				scheme.stopDecoration() + "\n" +
-				"Actual@2  : " + scheme.decorateEqualText("bar\"") + scheme.decorateDeletedText("\"\"") +
-				scheme.decorateEqualText(EOS_MARKER) + scheme.stopDecoration();
-			assert (actualMessage.contains(expectedMessage)) : "Expected:\n" + expectedMessage +
-				"\n**************** Actual:\n" + actualMessage;
+				"actual@1  : " + scheme.decorateEqualText("bar\"" + EOS_MARKER) + scheme.stopDecoration() + "\n" +
+				"expected@0: " + scheme.decorateEqualText("bar\"" + EOS_MARKER) + scheme.stopDecoration();
+			assert (actualMessage.contains(expectedMessage)) : "**************** Actual:\n" + actualMessage +
+				"\n**************** Expected:\n" + expectedMessage;
 		}
 	}
 
@@ -918,15 +915,15 @@ public final class DiffTest
 		try (ApplicationScope scope = new TestApplicationScope(NONE))
 		{
 			String actual = "not a number";
-			new TestValidatorsImpl(scope).requireThat(actual, "Actual").asPrimitiveInteger();
+			new TestValidatorsImpl(scope).requireThat(actual, "actual").asPrimitiveInteger();
 			assert (false) : "Expected validator to throw an exception";
 		}
 		catch (IllegalArgumentException e)
 		{
 			String actualMessage = e.getMessage();
-			assert (!actualMessage.contains("Diff")) :
+			assert (!actualMessage.contains("diff")) :
 				"Wasn't expecting integer equals() to return diff.\n" +
-					" Actual:\n" + actualMessage;
+					"actual:\n" + actualMessage;
 		}
 	}
 }
